# SurfaceSharingDemo

./: CMakeLists.txt
src/: D3D11App.cpp  Main.cpp
src/HelloTriangle/: CMakeLists.txt  D3D12HelloTriangle.cpp  DXSample.cpp  Main.cpp  Win32Application.cpp
src/HelloTriangle/inc/: D3D12HelloTriangle.h  DXSample.h
src/SharedSurface11/: CMakeLists.txt  D3D11App.cpp  Main.cpp
src/SharedSurface11/inc/: D3D11App.h
src/SharedSurface12/: CMakeLists.txt  D3D12App.cpp  Main.cpp
src/SharedSurface12/inc/: D3D12App.h
src/inc/: D3D11App.h
